Fixed illegal journey leg cast in SummaryUI